# aws-blueprints

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
blueprints/basic-web-app/: README.md
blueprints/basic-web-app/lib/: basic-web-app-stack.ts
python/: README.md  app.py  pyproject.toml  requirements.txt
python/blueprints/basic_web_app/: README.md  basic_web_app_stack.py  cdk.json  pyproject.toml
python/blueprints/url_shortener/: README.md  app.py  cdk.json  pyproject.toml  url_shortener_stack.py
python/blueprints/url_shortener/lambda/analytics/: lambda_function.py
python/blueprints/url_shortener/lambda/redirect/: lambda_function.py
python/blueprints/url_shortener/lambda/shorten/: lambda_function.py
typescript/: README.md  app.ts  cdk.json  package-lock.json  package.json
typescript/blueprints/basic-web-app/: README.md  cdk.json  package-lock.json  package.json
typescript/blueprints/url-shortener/: README.md  cdk.json  package-lock.json  package.json
typescript/blueprints/url-shortener/lambda/analytics/: index.js  index.ts  package.json
typescript/blueprints/url-shortener/lambda/redirect/: index.js  index.ts  package.json
typescript/blueprints/url-shortener/lambda/shorten/: index.js  index.ts  package.json
typescript/blueprints/url-shortener/lib/: url-shortener-stack.ts
